Fixes #5. Changed text alignment to left, it does look better than justified text

--- a/.themes/arsmentis/sass/partials/_blog.scss
+++ b/.themes/arsmentis/sass/partials/_blog.scss
@@ -2,7 +2,7 @@ article {
   padding-top: 1em;
   a { @extend .force-wrap; }
   p {
-    text-align:justify;
+    text-align:left;
     margin-bottom: 1em;
     font-family: 'Open Sans', sans-serif;
   }
@@ -179,7 +179,7 @@ article {
   padding-top: 1em;
   a { @extend .force-wrap; }
   p {
-    text-align:justify;
+    text-align:left;
     margin-bottom: 1em;
     font-family: 'Open Sans', sans-serif;
   }
